Correcting alignment of title and contact inf

--- a/css/styles.css
+++ b/css/styles.css
@@ -445,7 +445,7 @@ footer div {
 .contact a,
 .contact p {
   display: block;
-  padding: 10px;
+  padding: 10px 10px 10px 0;
   margin: 0;
 }
 
